# full-stack-challenge

./: .gitignore  README.md  docker-compose.yml
backend/: .coveragerc  Dockerfile  pyproject.toml  pytest.ini
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/tests/: conftest.py  test_db.py  test_serializer.py  test_view.py
backend/project/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Routes.js
frontend/src/components/: HelloMessage.jsx  PageContainer.jsx  PageTitle.jsx  Template.jsx
frontend/src/components/partials/Button/: index.jsx  styled.jsx
frontend/src/components/partials/Footer/: index.jsx  styled.jsx
frontend/src/components/partials/Header/: index.jsx  styled.jsx
frontend/src/pages/FullSpeed/: index.jsx  styled.jsx
frontend/src/pages/Home/: index.jsx  styled.jsx
frontend/src/pages/InsertStudent/: index.jsx
frontend/src/pages/InsertStudentsList/: index.jsx  styled.jsx
frontend/src/pages/NotFound/: index.jsx  styled.jsx
frontend/src/pages/RequestReturnName/: index.jsx
frontend/src/pages/ReturnName/: index.jsx
frontend/src/pages/SubmitForm/: index.jsx  styled.jsx
frontend/src/pages/TextLines/: index.jsx  styled.jsx
frontend/src/services/: api.js
